Replace date time to normal view

--- a/templates/post.html
+++ b/templates/post.html
@@ -15,7 +15,7 @@
                     <span class="meta">
                         Posted by
                         <a href="#!">{{ post.author }}</a>
-                        {{ post.date_posted }}
+                        on {{ post.date_posted.strftime('%B %d, %Y') }}
                     </span>
                 </div>
             </div>
