--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
            {% for post in posts %}
             <!-- Post preview-->
             <div class="post-preview">
-                <a href="post.html">
+                <a href="{{ url_for('blog_post.post', post_id=post.id) }}">
                     <h2 class="post-title">{{ post.title }}</h2>
                     <h3 class="post-subtitle">{{ post.subtitle }}</h3>
                 </a>
@@ -47,7 +47,7 @@
             {% endfor %}
 
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="{{ url_for('blog_post.add') }}">New Post</a></div>
         </div>
     </div>
 </div>
