Add edit functionality

--- a/templates/post.html
+++ b/templates/post.html
@@ -33,6 +33,9 @@
             <div class="col-md-10 col-lg-8 col-xl-7">
                 {{ post.content }}
             </div>
+            <div class="d-flex justify-content-end mb-4">
+                <a class="btn btn-primary text-uppercase" href="{{ url_for('blog_post.edit', post_id=post.id) }}">Edit</a>
+            </div>
         </div>
     </div>
 </article>
