--- a/templates/edit.html
+++ b/templates/edit.html
@@ -60,6 +60,12 @@
                         <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error editing post!</div></div>
                         <!-- Submit Button-->
                         <button class="btn btn-primary text-uppercase" id="submitButton" type="submit">Edit</button>
+
+                    </form><br>
+                    <form action="{{ url_for('blog_post.delete', post_id=post.id) }}" method="POST">
+                        <input type="submit" value="Delete"
+                                class="btn btn-danger text-uppercase"
+                                onclick="return confirm('Are you sure you want to delete this post?')">
                     </form>
                 </div>
             </div>
