Add comment to database

--- a/templates/post.html
+++ b/templates/post.html
@@ -38,15 +38,15 @@
                 <a class="btn btn-warning text-uppercase" href="{{ url_for('blog_post.edit', post_id=post.id) }}">Edit</a>
             </div>
         </div>
-        <form name='addForm' id="addForm" method="POST"">
+        <form name='addForm' id="addForm" method="POST" action="{{ url_for('blog_post.add_comment', post_id=post.id) }}">
             <div class="form-floating">
-                <input class="form-control" name='title' id="title" type="text" placeholder="Enter your title..." data-sb-validations="required" />
-                <label for="name">Name</label>
+                <input class="form-control" name='username' id="username" type="text" placeholder="Enter your name..." data-sb-validations="required" />
+                <label for="username">Name</label>
                 <div class="invalid-feedback" data-sb-feedback="title:required">A name is required.</div>
             </div>
             <div class="form-floating">
-                <textarea class="form-control" name='content' id="content" placeholder="Enter your content here..." style="height: 12rem" data-sb-validations="required"></textarea>
-                <label for="message">Comment</label>
+                <textarea class="form-control" name='comment' id="comment" placeholder="Enter your comment here..." style="height: 12rem" data-sb-validations="required"></textarea>
+                <label for="comment">Comment</label>
                 <div class="invalid-feedback" data-sb-feedback="content:required">A comment is required.</div>
             </div>
             <br />
